added in comments from tony that need to be addressed

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -1200,6 +1200,8 @@ n_disease_pol_metsyn <- NROW(GenomicRanges::reduce(IRanges::subsetByOverlaps(c(g
 
 In the clustered-significant regions of both \gls{ihs} and \gls{nsl} there were `r n_regions_ihs_nsl` independent regions that overlapped with genes associated with urate and metabolic diseases from all populations, for Polynesian populations the number of regions was `r n_regions_pol_ihs_nsl`. \gls{ihs} had `r n_regions_ihs` regions, while \gls{nsl} had `r n_regions_nsl`, and in common between the two statistics were `r n_regions_ihs_nsl_intersect` regions. The regions of the Polynesian populations covered `r n_pol_snps_ihs` \glspl{snp} for \gls{ihs} and `r n_pol_snps_nsl` for \gls{nsl}, with `r n_pol_snps_ihs_nsl ` in common between them. For the genes that had significant regions in Polynesian populations, `r n_disease_pol_urate` regions intersected genes that had been associated with urate and gout, `r n_disease_pol_obesity` with obesity, `r n_disease_pol_t2d` with \gls{t2d}, `r n_disease_pol_kd` with kidney disease, and `r n_disease_pol_metsyn` with metabolic syndrome.
 
+> need to make table of these clustered regions
+
 ```{r, message=FALSE, warning=FALSE}
 shared_ihs_pol_disease_snps <- left_join(bind_rows(disease_ihs_snps) %>% filter(superpop == "POL") %>% select(seqnames, start, end) %>% distinct(), bind_rows(disease_ihs_snps), by =c("seqnames", "start","end")) %>% select(-genename, -width, -strand) %>% distinct() %>% group_by(seqnames, start, end) %>% mutate(n = n()) %>% filter(n > 1) %>% arrange(desc(n))
 shared_ihs_pol_disease_snps_genes <- left_join(shared_ihs_pol_disease_snps, txdb_gene_annotate(GenomicRanges::GRanges(shared_ihs_pol_disease_snps)), by = c('seqnames', 'start','end'))
@@ -1529,7 +1531,7 @@ There were `r length(unique(gc_urate_gout_GR$SYMBOL))` loci that had an associat
 lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally()  %>% spread(SYMBOL, n) %>% left_join(., panel %>% select(pop, super_pop) %>% distinct(), by = 'pop') %>% arrange(statname, super_pop, pop) %>% View()
 ```
 
-In total there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` of the urate- and gout-associated loci that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations that met the lower tail threshold.  _SLC2A9_ had multiple windows for only \gls{flf} in \gls{ton}, as well as \gls{jpt} and \gls{chb}. Nearly all populations had windows for _BCAS3_, except 
+<!-- In total there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` of the urate- and gout-associated loci that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations that met the lower tail threshold.  _SLC2A9_ had multiple windows for only \gls{flf} in \gls{ton}, as well as \gls{jpt} and \gls{chb}. Nearly all populations had windows for _BCAS3_, except  -->
 
 <!-- There were 2 genes; _BCAS3_ and _RREB1_, that had at least one statistic in all of the Polynesian populations that met the threshold of significance in the lower tail. _BCAS3_ met the significance threshold for \gls{fwh} and \gls{flf} in all Polynesian populations and for \gls{td} in all Polynesian populations except \gls{ton}. _INHBC_ and _ATXN2_ both had windows that met the lower tail significance threshold for \gls{ze} in all Polynesians populations, except \gls{sam} for _INHBC_. _SLC2A9_ had multiple windows for only \gls{flf} in \gls{ton}, as well as \gls{jpt} and \gls{chb}. In total there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` of the urate- and gout-associated loci that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were no loci that were significant in all Polynesian populations in the upper tail, for any statistic.  -->
 
@@ -1686,7 +1688,7 @@ multiplot(gene_dendros(gene_data = obesity$mat_d$Tajima.D[,-1:-3]) + ggtitle("Ta
 
 The \gls{gwas} catalog had `r length(unique(t2d_GR$SYMBOL))` genes associated with \gls{t2d}. These were represented by `r nrow(t2d$mat_d$Tajima.D)` windows and clustering of the \gls{t2d} associated genes grouped the individual populations into their super population groups. For all clustering the \gls{amr} populations were split, with \gls{clm} and \gls{pur} grouped with the \gls{eur} populations for \gls{td}, \gls{fwh}, and \gls{ze} (Figure \@ref(fig:t2ddendros)). The \gls{pol} populations were assigned two exclusive groups through the cutree method that created an Eastern/Western Polynesian split for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. \gls{fwh} and \gls{ze} had a similar pattern to the groupings of the whole chromosome F~ST~ clustering.
 
-There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` \gls{t2d} associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` genes that had a significant window in any Polynesian population. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` genes with at least a window that met the significance threshold in the Polynesian populations. Only _THADA_ had windows from \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze} in the \gls{ton} population from the Polynesian populations. This was also true for the \gls{cdx} and \gls{chs} populations. _ARL15_, _MACF1_, _RREB1_, and _THADA_ each had in all Polynesian populations, at least one statistic that was significant in the lower tail. In the upper tail, _HLA-B_, _HMGA2_, _HNF1B_, _PTPRD_, _RBMS1_, _SGCG_, _TCF7L2_, and _THADA_ each had, in all Polynesian populations, at least one statistic that was significant.
+<!-- There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` \gls{t2d} associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` genes that had a significant window in any Polynesian population. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` genes with at least a window that met the significance threshold in the Polynesian populations. Only _THADA_ had windows from \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze} in the \gls{ton} population from the Polynesian populations. This was also true for the \gls{cdx} and \gls{chs} populations. _ARL15_, _MACF1_, _RREB1_, and _THADA_ each had in all Polynesian populations, at least one statistic that was significant in the lower tail. In the upper tail, _HLA-B_, _HMGA2_, _HNF1B_, _PTPRD_, _RBMS1_, _SGCG_, _TCF7L2_, and _THADA_ each had, in all Polynesian populations, at least one statistic that was significant. -->
 
 > _How could this be summarised?_
 
@@ -1795,7 +1797,7 @@ flf all except EUR
 ze only pol and eas not perfect
 -->
 
-There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(kd_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` kidney disease associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the lower tail there was `r lower_sig_stats %>% filter(SYMBOL %in% unique(kd_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` gene, _BRAS3_, with at least one window that was significant in the Polynesian populations. All Polynesian populations had at least one statistic that was significant in the upper tail for a window intersecting _PHTF2_. There was a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(kd_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% NROW()` genes that had at least one window that was significant in the upper tail.
+<!-- There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(kd_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` kidney disease associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the lower tail there was `r lower_sig_stats %>% filter(SYMBOL %in% unique(kd_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` gene, _BRAS3_, with at least one window that was significant in the Polynesian populations. All Polynesian populations had at least one statistic that was significant in the upper tail for a window intersecting _PHTF2_. There was a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(kd_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% NROW()` genes that had at least one window that was significant in the upper tail. -->
 
 > _How could this be summarised?_
 
@@ -1832,7 +1834,7 @@ multiplot(gene_dendros(gene_data = metsyn$mat_d$Tajima.D[,-1:-3]) + ggtitle("Taj
 
 The GWAS catalog had `r length(unique(metsyn_GR$SYMBOL))` genes associated with metabolic syndrome, this was represented by `r nrow(metsyn$mat_d$Tajima.D)` windows. The clustering of the metabolic syndrome associated genes grouped individual populations into their super population groups for \gls{td} and \gls{fwh} (Figure \@ref(fig:metsyndendros)). For \gls{flf}, the Polynesian populations were assigned two exclusive clusters that followed the Eastern/Western Polynesian split. \Gls{ze} clustered the individual populations, except for \gls{pel}, into their super populations. The Polynesian populations were grouped into entirely exclusive clusters for all statistics.
 
-There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(metsyn_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` metabolic syndrome associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the lower tail there were no genes with at least one window that was significant in the Polynesian populations. _DGKB_, and _LIPC_ each had, in all Polynesian populations, at least one statistic that was significant in the upper tail. There was a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(metsyn_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% NROW() %>% num_to_word()` genes that had at least a window that was significant in the upper tail.
+<!-- There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(metsyn_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` metabolic syndrome associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the lower tail there were no genes with at least one window that was significant in the Polynesian populations. _DGKB_, and _LIPC_ each had, in all Polynesian populations, at least one statistic that was significant in the upper tail. There was a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(metsyn_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% NROW() %>% num_to_word()` genes that had at least a window that was significant in the upper tail. -->
 
 > _How could this be summarised?_
 
@@ -2048,7 +2050,7 @@ over50per2 <- readRDS('data/04-over50per2.RDS')
 
 #### Random windows
 
-It is possible that obtaining the population groupings by clustering the most extreme windows for each statistic, could have occurred by chance. To assess this, 10,000 iterations of random resampling of 2500 windows per population was undertaken, and these windows were then clustered. This was done so that the extreme tail clustering could be compared to the random windows to see if the extreme window clustering performed better in exclusivity and proportion of super population clustering than by drawing windows at random. The maximum proportion of populations being clustered into their designated super population was then calculated when the tree was cut to have six groups (K = 6), one for each super population. The mean proportion of populations grouped into their super population was less than 0.5 for all super populations, with an overall mean of 0.282 (Table \@ref(tab:randtab)). This compared to a mean proportion of 0.916 for the clustering of the extreme windows. Based on the results of the admixture analysis, K = 11 was also tested and had higher mean exclusivity (0.424) than K = 6, due to more possible individual clusters. The remainder of this section will report on K = 6.
+It is possible that obtaining the population groupings by clustering the most extreme windows for each statistic, could have occurred by chance. To assess this, 10,000 iterations of random resampling of 2500 windows per population was undertaken, and these windows were then clustered. This was done so that the extreme tail clustering could be compared to the random windows to see if the extreme window clustering performed better in exclusivity and proportion of super population clustering than by drawing windows at random. The maximum proportion of populations being clustered into their designated super population was then calculated when the tree was cut to have six groups (K = 6), one for each super population. The mean proportion of populations grouped into their super population was less than 0.5 for all super populations, with an overall mean of 0.282 (Table \@ref(tab:randtab)). This compared to a mean proportion of 0.916 for the clustering of the extreme windows, this implies that the there is similarity in the regions of extreme score within a super population, and differences in these regions between super populations. Based on the results of the admixture analysis, K = 11 was also tested and had higher mean exclusivity (0.424) than K = 6, due to more possible individual clusters. The remainder of this section will report on K = 6.
 <!-- explain CV a little more in a sentence -->
 
 Not a single random draw grouped the all individual populations into all of their respective super populations. Only the populations of the \gls{afr} and \gls{eur} super populations did not each get fully grouped into a cluster. Grouping at least 50% of a super population was at best `r round(rand_tab %>% summarise(max = max(prop50)), digits = 0) %>% pull(max)`% of the draws but for the larger super populations (\gls{afr}, \gls{eas}, \gls{eur}, and \gls{sas}) it was on average `r round(rand_tab %>% filter(!super %in% c('POL','AMR'))%>% summarise(mean = mean(prop50)), digits = 0) %>% pull(mean)`% of the draws. There were only `r over50per %>% NROW() %>% num_to_word()` random draws that had all super populations each having half or more of their individual populations assigned the same group. The mean exclusivity of the random draws was low, ranging from `r min(excl_tab$mean) %>% sprintf('%.2f', .)` to `r max(excl_tab$mean) %>% sprintf('%.2f', .)` and there were no random draws in which the Polynesian populations were all grouped together as a Polynesian exclusive cluster.
@@ -2178,21 +2180,27 @@ poly_complete %>% full_join(., perc_complete %>% select(allcomplete = n, everyth
 
 ### Use of selection and neutrality statistics to group populations
 
-Other studies have previously shown the affinities between Polynesians and other Pacific populations, most often with mitochondrial DNA and Y chromosome markers [@Kayser2010; @Duggan2014a]. Autosomes have also been used to explore Polynesian origins and relationships between Pacific populations, through generally with rather small sample sizes [@Kimura2008; @Kayser2010; @Hudjashov2017; @Hudjashov2018]. This study is the first to compare four Polynesian populations, two of East, and two of West Polynesian ancestry, and of similar sample sizes to those of the \glsdesc{1kgp}. The analysis is important because it adds new evidence of the genetic relationship between the Polynesian populations and other populations. This is important, as understanding the ancestry of populations helps to inform and reduce the stigma of genetic diseases [@Sankar2006].
+Other studies have previously shown the relationships between Polynesians and other Pacific populations, most often with mitochondrial DNA and Y chromosome markers [@Kayser2010; @Duggan2014a]. Autosomes have also been used to explore Polynesian origins and relationships between Pacific populations, though generally with rather small sample sizes [@Kimura2008; @Kayser2010; @Hudjashov2017; @Hudjashov2018]. This study is the first to compare four Polynesian populations, two of East, and two of West Polynesian ancestry, and of similar sample sizes to those of the \glsdesc{1kgp}. The analysis is important because it adds new evidence of the genetic relationship between the Polynesian populations and other populations. This is important, as understanding the ancestry of populations helps to inform and reduce the stigma of genetic diseases [@Sankar2006].
 
-In Chapter 3 it was noted that the populations had population specific distributions for the frequency spectrum based selection and neutrality statistics. The tails of the distributions contain the most extreme values and are therefore most likely to be the loci that have undergone selection - specifically the negative tail is of interest for positive selection. It was thought that perhaps the tails could be used to group the individual populations using an unsupervised method - in this case, hierarchical clustering - and reassemble the super populations. The first test used the entire chromosome and created a summary statistic that was used to create clusters. It was successful in re-assembling the super populations using F~ST~ which is a measure of population differentiation, and had previously been used within the \gls{1kgp} dataset to establish how differentiated the \gls{1kgp} samples were from each other [@1KGP2015snp]. The population groupings were also the same as in the \gls{pca} that was used to select the individuals for the selection analysis (Figure \@ref(fig:allpopPCA)). Both the F~ST~ results and PCA (for the subject selection) confirmed the genetic relatedness and differentiation of the Polynesian populations in a global context, as being most similar to the East Asian populations [@Kayser2008a]. It also confirmed that within Polynesia, the differentiation between Eastern and Western Polynesia, consistent with the out of Africa human migration and subsequent Polynesian expansion [@Nielsen2017; @Matisoo-Smith2015; @Skoglund2016; @Hudjashov2018]. 
+In Chapter 3 it was noted that the populations had population specific-distributions for the frequency spectrum-based selection and neutrality statistics. The tails of the distributions contain the most extreme values and are therefore most likely to be the loci that have undergone selection - specifically the negative tail is of interest for positive selection. It was thought that perhaps the tails could be used to group the individual populations using an unsupervised method - in this case, hierarchical clustering - and reassemble the super populations. The first test used the entire chromosome and created a summary statistic that was used to create clusters. It was successful in re-assembling the super populations using F~ST~ which is a measure of population differentiation, and had previously been used within the \gls{1kgp} dataset to establish how differentiated the \gls{1kgp} samples were from each other [@1KGP2015snp]. The population groupings were also the same as in the \gls{pca} that was used to select the individuals for the selection analysis (Figure \@ref(fig:allpopPCA)). Both the F~ST~ results and PCA (for the subject selection) confirmed the genetic relatedness and differentiation of the Polynesian populations in a global context, as being most similar to the East Asian populations [@Kayser2008a]. It also confirmed that within Polynesia, the differentiation between Eastern and Western Polynesia, consistent with the out of Africa human migration and subsequent Polynesian expansion [@Nielsen2017; @Matisoo-Smith2015; @Skoglund2016; @Hudjashov2018]. 
 
 #### Clustering of aggregate statistics 
 
-The whole chromosome summary using the intra-population frequency spectrum neutrality and selection statistics had varying levels of success in re-assembling the super populations. \gls{flf} had mini-groups of 2-3 populations that were part of the same super population, but these mini-groups were not closely linked to the other groups of the same super population. These two statistics are based on singletons, and it is likely that these are not well represented in the markers of the CoreExome chip itself, or the quality control that the New Zealand samples underwent. This would lead to an under-representation of the singletons that actually might be present in the populations. Overall, it was found that the clustering of selection and neutrality test statistics for entire chromosomes did not resemble the grouping that clustering on F~ST~ produced. 
+The whole chromosome summary using the intra-population frequency spectrum neutrality and selection statistics had varying levels of success in re-assembling the super populations. \gls{flf} had mini-groups of 2-3 populations that were part of the same super population, but these mini-groups were not closely linked to the other groups of the same super population. These two statistics are based on singletons, and it is likely that these are not well represented in the markers of the CoreExome chip itself, or the quality control that the New Zealand samples underwent. During the quality control process, a singleton was more likely to be removed, or less likely to be rescued upon manual inspection depending on the softwares prefined cluster boundaries for the probe intensities. This would lead to an under-representation of the singletons that actually might be present in the populations. Overall, it was found that the clustering of selection and neutrality test statistics for entire chromosomes did not resemble the grouping that clustering on F~ST~ produced. 
 
 #### Clustering of windowed statistics
 
-However, compared to the entire chromosome summaries, using windows from the extremes of the distribution was effective at clustering the individual populations into their super population groups. \gls{fwh} was the only statistic that grouped all individual populations into their corresponding super populations, whereas \gls{td} and \gls{ze} had the same split of the \gls{amr} populations as with the F~ST~ clustering. The clustering of populations into their super populations was not seen when random windows were used for clustering, indicating that there is a degree of commonality in the extreme windows within a super population group.The haplotypic based methods of \gls{ihs} and \gls{nsl} clustered into super populations and had the \gls{amr} population split too. There was not a high amount of region sharing outside of each super population.
+However, compared to the entire chromosome summaries, using windows from the extremes of the distribution was effective at clustering the individual populations into their super population groups. \gls{fwh} was the only statistic that grouped all individual populations into their corresponding super populations, whereas \gls{td} and \gls{ze} had the same split of the \gls{amr} populations as with the F~ST~ clustering. 
+
+> Tony: need to expnd on this, it seems an important finding
+
+> The clustering of populations into their super populations was not seen when random windows were used for clustering, indicating that there is a degree of commonality in the extreme windows within a super population group.
+
+The haplotypic based methods of \gls{ihs} and \gls{nsl} clustered into super populations and had the \gls{amr} population split too. There was not a high amount of region sharing outside of each super population.
 
 #### Clustering on genic regions
 
-Clustering from gene lists for the frequency spectrum based selection and neutrality statistics consistently grouped the individual populations into their super populations although there was inconsistency for the \gls{amr} populations. With the exception of the \gls{amr} populations, the clustering of populations using windows or haplotypes was consistent with previously reported results [@1KGP2015snp; @pickrell2009signals]. The grouping of populations was also seen with random lists of genes. This would indicate that the commonalities with populations for a gene are not specific to a disease, but instead, a general locus by locus similarity.
+Clustering from gene lists for the frequency spectrum based selection and neutrality statistics consistently grouped the individual populations into their super populations although there was inconsistency for the \gls{amr} populations. This inconsistency could be the influence of admixture in the \gls{amr} populations. With the exception of the \gls{amr} populations, the clustering of populations using windows or haplotypes was consistent with previously reported results [@1KGP2015snp; @pickrell2009signals]. The grouping of populations was also seen with random lists of genes. This would indicate that the commonalities with populations for a gene are not specific to a disease, but instead, a general locus by locus similarity.
 
 <!-- > talk about how selection on genes vs non gene regions - random windows are much more likely to be intergenic 
 this is not necessarily the case, due to the way things were annotated
@@ -2203,6 +2211,11 @@ Allele sharing between populations is moderate for common \glspl{snp}, and more 
 The extremes of the distributions represent different types of selection or demographic events and are different depending on the selection test statistic being used [@Tajima1989; @fay2000hitchhiking; @Fu1993; @Zeng2006]. The upper end of the distribution is able to be compared as all of the values that it encompassed were positive in value across all populations for all statistics and represent the same types of selection or demography.
 
 The clustering of the most extreme windows represents, other than a similarity in allele frequencies between populations, a pattern that is consistent with the out of Africa model of human migration [@Mallick2016; @Pagani2016].
+
+>Tony: state the obvious, presumably a result of selection, drift, bottleneck, introgression
+
+> Tony: Q - do the clustered regions overlap with areas of neanderthal/denisovian introgression?
+
 
 ### Potential shared selective histories for loci associated with urate and metabolic disease
 
@@ -2227,7 +2240,11 @@ The clustering of the most extreme windows represents, other than a similarity i
 <!-- could the genes that were distinctive explain the disease burden differences -->
 
 
-The "Out of Africa" model of human migration can be useful in explaining differences between modern populations and potential time points when these differences may have arisen. Under a neutral model the differences in allele frequency between populations are due to genetic drift [@kimura1979neutral]. Demographic events such as bottleneck, migration, expansion, and admixture also contribute to the differences in allele frequencies found between populations [@Wright1951]. Selection on the other hand acts in a targeted manner, therefore if the selection occurred post population split then it would be expected to look neutral in one population but not in the other. However, if the selective event happened in an ancestral population of the two then, dependent on time since divergence, it would be expected to be observed in both populations [@Hermisson2017]. It is also possible to have 'parallel' selection, where both populations experience independent selection [@Tennessen2011]. Using a coalescent approach to identify the common intermediate ancestral populations, if for example, a genomic region identified as under selection in the Polynesian populations was also found in the East Asian populations, but not the Europeans, it could be inferred that the selective pressure was likely after the migration from Europe to East Asia. In the context of modern metabolic disease, the question being asked is, is there evidence in the ancestral populations of selection in metabolic disease associated loci that is in common with the Polynesian populations?
+The "Out of Africa" model of human migration can be useful in explaining differences between modern populations and potential time points when these differences may have arisen. Under a neutral model the differences in allele frequency between populations are due to genetic drift [@kimura1979neutral]. Demographic events such as bottleneck, migration, expansion, and admixture also contribute to the differences in allele frequencies found between populations [@Wright1951]. Selection on the other hand acts in a targeted manner, therefore if the selection occurred post population split then it would be expected to look neutral in one population but not in the other. However, if the selective event happened in an ancestral population of the two then, dependent on time since divergence, it would be expected to be observed in both populations [@Hermisson2017]. It is also possible to have 'parallel' selection, where both populations experience independent selection [@Tennessen2011]. Using a coalescent approach to identify the common intermediate ancestral populations, if for example, a genomic region identified as under selection in the Polynesian populations was also found in the East Asian populations, but not the Europeans, it could be inferred that the selective pressure was likely after the migration from Europe to East Asia. 
+
+>Tony: doesn't make sense ->
+
+>In the context of modern metabolic disease, the question being asked is, is there evidence in the ancestral populations of selection in metabolic disease associated loci that is in common with the Polynesian populations?
 
 The current metabolic disease burden in the Polynesian populations is higher than other populations [@Winnard2012; @Winnard2013]. This higher disease burden could possibly have arisen due to environmental changes and selective pressure on Polynesian populations after the migration into the Pacific. As found in Chapter 3, however, there was limited evidence for selection, especially in the overlap between haplotypic and \gls{sfs}-based methodologies, in the genes that were associated with urate and associated metabolic diseases (Table \@ref(tab:superDiseaseGenesTab)). Three approaches were taken to investigate the potential of a 'shared selective' history of the loci associated with urate and metabolic disease. These included, investigating the loci that were in either the 1^st^ or 99^th^ percentile, the loci that were in the clustered regions for the significant \glspl{snp} of the haplotypic statistics, \gls{ihs} and \gls{nsl}. And finally, hierarchical clustering of the median-centred values for windows that intersected the loci associated with urate and metabolic disease.
 
@@ -2358,7 +2375,7 @@ Genes that are associated with disease perform well at grouping populations into
 
 In all combinations of clustering of selection and neutrality statistics used, the East Asian populations were the most similar to the Polynesian populations. There was additional evidence of the differences and similarities of the Polynesian populations, between the Eastern and Western Polynesian's, which reflected the migration history. And there was evidence of regions having a shared ancestry between these populations, along with evidence of a common ancestral population with the modern East Asian populations.
 
-
+> Tony: be more precise "...effects of drift(...etc.." and "...but limit commonality between super populations"
 
 
 
